--- a/404.html
+++ b/404.html
@@ -7,13 +7,13 @@
 <meta name=color-scheme content="light dark"><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://manifold.finance/hub/404.html">
+<meta property="og:url" content="https://manifoldfinance.github.io/hub/404.html">
 <title>404 Page not found | Manifold Finance Hub</title>
 <link rel=manifest href=/hub/manifest.json>
 <link rel=icon href=/hub/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/hub/book.min.95d69eb6bad8b9707ff2b5d8d9e31ce70a1b84f2ed7ffaf665ffcf00aa7993bd.css integrity="sha256-ldaetrrYuXB/8rXY2eMc5wobhPLtf/r2Zf/PAKp5k70=" crossorigin=anonymous>
 <script defer src=/hub/flexsearch.min.js></script>
-<script defer src=/hub/en.search.min.6963b2dd05c8f4425261830e02407e1ac60a5b7e9bced228bf0fa48846fe6a42.js integrity="sha256-aWOy3QXI9EJSYYMOAkB+GsYKW36bztIovw+kiEb+akI=" crossorigin=anonymous></script>
+<script defer src=/hub/en.search.min.f681c12585e876bd7eead224bba91b449a1ac86173808aa58505d52da4ddf207.js integrity="sha256-9oHBJYXodr1+6tIku6kbRJoayGFzgIqlhQXVLaTd8gc=" crossorigin=anonymous></script>
 <style>.not-found{text-align:center}.not-found h1{margin:.25em 0 0;opacity:.25;font-size:40vmin}</style>
 </head>
 <body>
