--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <meta name=generator content="Hugo 0.86.0">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=description content="Ecosystem Hub #  Developer Hub #  Est in vagis et Pittheus tu arge accipiter regia iram vocatur nurus. Omnes ut olivae sensit arma sorori deducit, inesset crudus, ego vetuere aliis, modo arsit? Utinam rapta fiducia valuere litora adicit cursu, ad facies  Community Hub #  Ea furtique risere fratres edidit terrae magis. Colla tam mihi tenebat: miseram excita suadent es pecudes iam. Concilio quam velatus posset ait quod nunc!">
+<meta name=description content="Ecosystem Hub #  Governance, Development and Community resources. This will take you the appropriate resource / information. Cant find what you are looking for? Open an issue on GitHub or Ask a question on our forums
+Developer Hub #   VSCode Extensions Curated list @openmev/sdk Well-typed Nodejs SDK Docker Hub qAbiEncoder C Library for q/kdb+ to process EVM ABI qBig Integer Library for big integer support for q/kdb+ qQuarticRoots   Community Hub #      OpenMEV #  The @openmev/sdk offers multiple packages, for example here is an ethers.">
 <meta name=theme-color content="#FFFFFF">
 <meta name=color-scheme content="light dark"><meta property="og:title" content="Introduction">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://manifold.finance/hub/">
+<meta property="og:url" content="https://manifoldfinance.github.io/hub/">
 <title>Introduction | Manifold Finance Hub</title>
 <link rel=manifest href=/hub/manifest.json>
 <link rel=icon href=/hub/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/hub/book.min.95d69eb6bad8b9707ff2b5d8d9e31ce70a1b84f2ed7ffaf665ffcf00aa7993bd.css integrity="sha256-ldaetrrYuXB/8rXY2eMc5wobhPLtf/r2Zf/PAKp5k70=" crossorigin=anonymous>
 <script defer src=/hub/flexsearch.min.js></script>
-<script defer src=/hub/en.search.min.6963b2dd05c8f4425261830e02407e1ac60a5b7e9bced228bf0fa48846fe6a42.js integrity="sha256-aWOy3QXI9EJSYYMOAkB+GsYKW36bztIovw+kiEb+akI=" crossorigin=anonymous></script>
-<link rel=alternate type=application/rss+xml href=http://manifold.finance/hub/index.xml title="Manifold Finance Hub">
+<script defer src=/hub/en.search.min.f681c12585e876bd7eead224bba91b449a1ac86173808aa58505d52da4ddf207.js integrity="sha256-9oHBJYXodr1+6tIku6kbRJoayGFzgIqlhQXVLaTd8gc=" crossorigin=anonymous></script>
+<link rel=alternate type=application/rss+xml href=https://manifoldfinance.github.io/hub/index.xml title="Manifold Finance Hub">
 </head>
 <body dir=ltr>
 <input type=checkbox class="hidden toggle" id=menu-control>
@@ -34,6 +35,34 @@
 <ul id=book-search-results></ul>
 </div>
 <ul>
+<li>
+<a href=https://manifoldfinance.github.io/hub/docs/openmev/>OpenMEV Documentation</a>
+<ul>
+<li>
+<a href=https://manifoldfinance.github.io/hub/docs/openmev/rebate/>Rebating Transaction Costs</a>
+</li>
+<li>
+<a href=https://manifoldfinance.github.io/hub/docs/openmev/functions_table/>SushiSwap Router Function Calls</a>
+</li>
+</ul>
+</li>
+<li>
+<a href=https://manifoldfinance.github.io/hub/docs/sushiswap/sushi-api/>Sushi API</a>
+</li>
+<li class=book-section-flat>
+<span>Technical</span>
+<ul>
+<li>
+<a href=https://manifoldfinance.github.io/hub/docs/technical/katex/>Katex</a>
+</li>
+<li>
+<a href=https://manifoldfinance.github.io/hub/docs/technical/mermaid/>Mermaid</a>
+</li>
+</ul>
+</li>
+<li>
+<a href=https://manifoldfinance.github.io/hub/docs/sushiswap/>OpenMEV Documentation</a>
+</li>
 </ul>
 <ul>
 <li>
@@ -67,8 +96,17 @@ View on Github
 <ul>
 <li><a href=#ecosystem-hub>Ecosystem Hub</a>
 <ul>
-<li><a href=#platform>Platform</a></li>
-<li><a href=#support-and-help>Support and Help</a></li>
+<li><a href=#openmev>OpenMEV</a>
+<ul>
+<li><a href=#code-of-conduct>Code of Conduct</a></li>
+</ul>
+</li>
+<li><a href=#support-and-help>Support and Help</a>
+<ul>
+<li></li>
+<li><a href=#defect-response>Defect Response</a></li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
@@ -79,49 +117,95 @@ View on Github
 Ecosystem Hub
 <a class=anchor href=#ecosystem-hub>#</a>
 </h1>
+<p>Governance, Development and Community resources. This will take you the appropriate resource / information. Cant find what you are looking for? <a href=https://github.com/manifoldfinance/hub/issues>Open an issue on GitHub</a> or <a href=https://forums.manifoldfinance.com>Ask a question on our forums</a></p>
 <div class="book-columns flex flex-wrap">
 <div class="flex-even markdown-inner">
 <h2 id=developer-hub>
 Developer Hub
 <a class=anchor href=#developer-hub>#</a>
 </h2>
-<p>Est in vagis et Pittheus tu arge accipiter regia iram vocatur nurus. Omnes ut
-olivae sensit <strong>arma sorori</strong> deducit, inesset <strong>crudus</strong>, ego vetuere aliis,
-modo arsit? Utinam rapta fiducia valuere litora <em>adicit cursu</em>, ad facies
+<ul>
+<li><a href=https://github.com/manifoldfinance/vscode-recommendations>VSCode Extensions</a> Curated list</li>
+<li><a href=https://github.com/manifoldfinance/openmev-sdk>@openmev/sdk</a> Well-typed Nodejs SDK</li>
+<li><a href=https://github.com/openmev/docker-hub>Docker Hub</a></li>
+<li><a href=https://github.com/manifoldfinance/qAbiEncode>qAbiEncoder</a> C Library for q/kdb+ to process EVM ABI</li>
+<li><a href=https://github.com/manifoldfinance/qBigInt>qBig Integer</a>
+Library for big integer support for q/kdb+</li>
+<li><a href=https://github.com/manifoldfinance/qQuarticRoots>qQuarticRoots</a></li>
+</ul>
 </div>
 <div class="flex-even markdown-inner">
 <h2 id=community-hub>
 Community Hub
 <a class=anchor href=#community-hub>#</a>
 </h2>
-<p>Ea <em>furtique</em> risere fratres edidit terrae magis. Colla tam mihi tenebat:
-miseram excita suadent es pecudes iam. Concilio <em>quam</em> velatus posset ait quod
-nunc! Fragosis suae dextra geruntur functus vulgata.
+<p><a href=https://t.me/manifoldfinance><img src="https://img.shields.io/badge/telegram-manifold_finance-blue?logo=telegram&logoColor=white" alt="telegram - manifold finance"></a> <br>
+<a href=https://twitter.com/foldfinance><img src="https://img.shields.io/static/v1?label=twitter&message=%40foldfinance&color=blue&logo=twitter&logoColor=white" alt="twitter - @foldfinance"></a> <br></p>
+<p><img src="https://img.shields.io/discord/833691260472393729?color=%237289DA&label=Manifold%20Community&logo=discord" alt=Discord>
+<img src="https://img.shields.io/discourse/posts?label=Community%20Forums&logo=discourse&server=https%3A%2F%2Fforums.manifoldfinance.com" alt="Discourse posts"></p>
 </div>
 </div>
-<h2 id=platform>
-Platform
-<a class=anchor href=#platform>#</a>
+<h2 id=openmev>
+OpenMEV
+<a class=anchor href=#openmev>#</a>
 </h2>
-<p>Lorem <strong>markdownum</strong> emicat gestu. Cannis sol pressit ducta. <strong>Est</strong> Idaei,
-tremens ausim se tutaeque, illi ulnis hausit, sed, lumina cutem. Quae avis
-sequens!</p>
-<pre><code>var panel = ram_design;
-if (backup + system) {
-    file.readPoint = network_native;
-    sidebar_engine_device(cell_tftp_raster,
-            dual_login_paper.adf_vci.application_reader_design(
-            graphicsNvramCdma, lpi_footer_snmp, integer_model));
-}
-</code></pre>
+<p>The @openmev/sdk offers multiple packages, for example here is an ethers.js provider
+using OpenMEVs backend platform to provide trade execution services to end users.</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-typescript data-lang=typescript><span style=color:#75715e>/**
+</span><span style=color:#75715e>* @package OpenMEV Ethereum Provider Example
+</span><span style=color:#75715e>* @summary Provides RPC Connectivity to DApps/Wallets
+</span><span style=color:#75715e>*  connects to multiple RPC endpoints
+</span><span style=color:#75715e>* @tldr: openmev aggregates multiple MEV protection solutions, seamlessly.
+</span><span style=color:#75715e>* @since 2021.09
+</span><span style=color:#75715e>*/</span>
+
+<span style=color:#66d9ef>import</span> { <span style=color:#a6e22e>Wallet</span> } <span style=color:#66d9ef>from</span> <span style=color:#e6db74>&#34;@ethersproject/wallet&#34;</span>;
+<span style=color:#66d9ef>import</span> <span style=color:#f92672>*</span> <span style=color:#66d9ef>as</span> <span style=color:#a6e22e>providers</span> <span style=color:#66d9ef>from</span> <span style=color:#e6db74>&#34;@ethersproject/providers&#34;</span>;
+<span style=color:#66d9ef>import</span> { <span style=color:#a6e22e>OpenMEVBundleProvider</span> } <span style=color:#66d9ef>from</span> <span style=color:#e6db74>&#34;@OpenMEV/sdk-ethers-provider&#34;</span>;
+<span style=color:#75715e>// (...)
+</span></code></pre></div><h3 id=code-of-conduct>
+Code of Conduct
+<a class=anchor href=#code-of-conduct>#</a>
+</h3>
+<p><a href=https://github.com/manifoldfinance/.github/blob/master/CODE_OF_CONDUCT.md>Please read our brief and sensible code of conduct</a></p>
 <h2 id=support-and-help>
 Support and Help
 <a class=anchor href=#support-and-help>#</a>
 </h2>
-<p>Idmoniae ripis, at aves, ali missa adest, ut <em>et autem</em>, et ab?</p>
+<p><a href=mailto:ops@manifoldfinnace.com>ops@manifoldfinnace.com</a> - or via discord / telegram <br>
+Never send anyone tokens/currency/money/passwords/logins/etc. <br>
+<strong>We will never need these things</strong>.</p>
+<h4 id=software-defects>
+Software Defects
+<a class=anchor href=#software-defects>#</a>
+</h4>
+<p><a href=https://github.com/manifoldfinance/.github/blob/master/SECURITY.adoc>Full version is found here</a></p>
+<p>At Manifold Finance, Inc, security is a priority. But regardless of
+how much effort we put into system security, there may still be
+vulnerabilities present. If you discover a vulnerability, we want to
+know about it so we can take steps to address it as quickly as possible.
+We would like to ask you to help us better protect our clients and our
+systems.</p>
+<h3 id=defect-response>
+Defect Response
+<a class=anchor href=#defect-response>#</a>
+</h3>
+<p>If you think you have discovered a security issue in any of the
+our projects, we’d love to hear from you. We will take all
+security bugs seriously and if confirmed upon investigation we will
+patch it within a reasonable amount of time and release a public
+security bulletin discussing the impact and credit the discoverer.</p>
+<p>Sam Bacha <a href=mailto:sam@manifoldfinnance.com>sam@manifoldfinnance.com</a> <br>
+Network Operations <a href=mailto:ops@manifoldfinance.com>ops@manifoldfinance.com</a> <br>
+SRE On Call <a href=mailto:janitor@manifoldfinance.com>janitor@manifoldfinance.com</a> <br></p>
 </article>
 <footer class=book-footer>
 <div class="flex flex-wrap justify-between">
+<div><a class="flex align-center" href=https://github.com/manifoldfinance/hub.github.io/commit/98fb95c75affb955cf1177577ff9f83efd201146 title="Last modified by sam bacha | 25.10.2021" target=_blank rel=noopener>
+<img src=/hub/svg/calendar.svg class=book-icon alt=Calendar>
+<span>25.10.2021</span>
+</a>
+</div>
 <div>
 <a class="flex align-center" href=https://github.com/manifoldfinance/hub.github.io/edit/main/content/content/_index.md target=_blank rel=noopener>
 <img src=/hub/svg/edit.svg class=book-icon alt=Edit>
@@ -141,8 +225,17 @@ Support and Help
 <ul>
 <li><a href=#ecosystem-hub>Ecosystem Hub</a>
 <ul>
-<li><a href=#platform>Platform</a></li>
-<li><a href=#support-and-help>Support and Help</a></li>
+<li><a href=#openmev>OpenMEV</a>
+<ul>
+<li><a href=#code-of-conduct>Code of Conduct</a></li>
+</ul>
+</li>
+<li><a href=#support-and-help>Support and Help</a>
+<ul>
+<li></li>
+<li><a href=#defect-response>Defect Response</a></li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
