--- a/public/404.html
+++ b/public/404.html
@@ -1,52 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-    <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="theme-color" content="#FFFFFF">
-<meta name="color-scheme" content="light dark"><meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://manifoldfinance.github.io/hub/404.html" />
-
+<!doctype html><html lang=en>
+<head>
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta name=description content>
+<meta name=theme-color content="#FFFFFF">
+<meta name=color-scheme content="light dark"><meta property="og:title" content="404 Page not found">
+<meta property="og:description" content>
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://manifoldfinance.github.io/hub/404.html">
 <title>404 Page not found | Manifold Finance Hub</title>
-<link rel="manifest" href="/hub/manifest.json">
-<link rel="icon" href="/hub/favicon.png" type="image/x-icon">
-<link rel="stylesheet" href="/hub/book.min.95d69eb6bad8b9707ff2b5d8d9e31ce70a1b84f2ed7ffaf665ffcf00aa7993bd.css" integrity="sha256-ldaetrrYuXB/8rXY2eMc5wobhPLtf/r2Zf/PAKp5k70=" crossorigin="anonymous">
-  <script defer src="/hub/flexsearch.min.js"></script>
-  <script defer src="/hub/en.search.min.f681c12585e876bd7eead224bba91b449a1ac86173808aa58505d52da4ddf207.js" integrity="sha256-9oHBJYXodr1&#43;6tIku6kbRJoayGFzgIqlhQXVLaTd8gc=" crossorigin="anonymous"></script>
-<!--
-Made with Book Theme
-https://github.com/alex-shpak/hugo-book
--->
-    
-
-    <style>
-      .not-found {
-        text-align: center;
-      }
-      .not-found h1 {
-        margin: .25em 0 0 0;
-        opacity: .25;
-        font-size: 40vmin;
-      }
-    </style>
-  </head>
-
-  <body>
-    <main class="flex justify-center not-found">
-      <div>
-        <h1>404</h1>
-        <h2>Page Not Found</h2>
-        <h3>
-          <a href="/hub/">Manifold Finance Hub</a>
-        </h3>
-      </div>
-    </main>
-
-    
-  </body>
-
-  </html>
+<link rel=manifest href=/hub/manifest.json>
+<link rel=icon href=/hub/favicon.png type=image/x-icon>
+<link rel=stylesheet href=/hub/book.min.95d69eb6bad8b9707ff2b5d8d9e31ce70a1b84f2ed7ffaf665ffcf00aa7993bd.css integrity="sha256-ldaetrrYuXB/8rXY2eMc5wobhPLtf/r2Zf/PAKp5k70=" crossorigin=anonymous>
+<script defer src=/hub/flexsearch.min.js></script>
+<script defer src=/hub/en.search.min.f681c12585e876bd7eead224bba91b449a1ac86173808aa58505d52da4ddf207.js integrity="sha256-9oHBJYXodr1+6tIku6kbRJoayGFzgIqlhQXVLaTd8gc=" crossorigin=anonymous></script>
+<style>.not-found{text-align:center}.not-found h1{margin:.25em 0 0;opacity:.25;font-size:40vmin}</style>
+</head>
+<body>
+<main class="flex justify-center not-found">
+<div>
+<h1>404</h1>
+<h2>Page Not Found</h2>
+<h3>
+<a href=/hub/>Manifold Finance Hub</a>
+</h3>
+</div>
+</main>
+</body>
+</html>
