deploy: 5e148fa8c89f18f4f70f2f82adbeba7217ddbb31

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Developer Hub #   VSCode Extensions Curated list @openmev/sdk Well-typed Nodejs 
 <link rel=icon href=/hub/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/hub/book.min.95d69eb6bad8b9707ff2b5d8d9e31ce70a1b84f2ed7ffaf665ffcf00aa7993bd.css integrity="sha256-ldaetrrYuXB/8rXY2eMc5wobhPLtf/r2Zf/PAKp5k70=" crossorigin=anonymous>
 <script defer src=/hub/flexsearch.min.js></script>
-<script defer src=/hub/en.search.min.3d99d950679491d8d73809f61404edd4329ceeb8d229028e517e990bd7959cd4.js integrity="sha256-PZnZUGeUkdjXOAn2FATt1DKc7rjSKQKOUX6ZC9eVnNQ=" crossorigin=anonymous></script>
+<script defer src=/hub/en.search.min.f681c12585e876bd7eead224bba91b449a1ac86173808aa58505d52da4ddf207.js integrity="sha256-9oHBJYXodr1+6tIku6kbRJoayGFzgIqlhQXVLaTd8gc=" crossorigin=anonymous></script>
 <link rel=alternate type=application/rss+xml href=https://manifoldfinance.github.io/hub/index.xml title="Manifold Finance Hub">
 </head>
 <body dir=ltr>
@@ -129,8 +129,7 @@ Developer Hub
 <li><a href=https://github.com/manifoldfinance/openmev-sdk>@openmev/sdk</a> Well-typed Nodejs SDK</li>
 <li><a href=https://github.com/openmev/docker-hub>Docker Hub</a></li>
 <li><a href=https://github.com/manifoldfinance/qAbiEncode>qAbiEncoder</a> C Library for q/kdb+ to process EVM ABI</li>
-<li><a href=https://github.com/manifoldfinance/qBigInt>qBig Integer</a>
-Library for big integer support for q/kdb+</li>
+<li><a href=https://github.com/manifoldfinance/qBigInt>qBig Integer</a> Library for big integer support for q/kdb+</li>
 <li><a href=https://github.com/manifoldfinance/qQuarticRoots>qQuarticRoots</a></li>
 </ul>
 </div>
@@ -201,9 +200,9 @@ SRE On Call <a href=mailto:janitor@manifoldfinance.com>janitor@manifoldfinance.c
 </article>
 <footer class=book-footer>
 <div class="flex flex-wrap justify-between">
-<div><a class="flex align-center" href=https://github.com/manifoldfinance/hub.github.io/commit/98fb95c75affb955cf1177577ff9f83efd201146 title="Last modified by sam bacha | 25.10.2021" target=_blank rel=noopener>
+<div><a class="flex align-center" href=https://github.com/manifoldfinance/hub.github.io/commit/5e148fa8c89f18f4f70f2f82adbeba7217ddbb31 title="Last modified by sam bacha | 11.12.2021" target=_blank rel=noopener>
 <img src=/hub/svg/calendar.svg class=book-icon alt=Calendar>
-<span>25.10.2021</span>
+<span>11.12.2021</span>
 </a>
 </div>
 <div>
